# serializer version: 1
# name: test_entities[select.mock_lyngdorf_roomperfect_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Global',
        'Focus 1',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.mock_lyngdorf_roomperfect_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RoomPerfect position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RoomPerfect position',
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_perfect_position',
    'unique_id': '0050c27c76b2_room_perfect_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.mock_lyngdorf_roomperfect_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf RoomPerfect position',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Global',
        'Focus 1',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_lyngdorf_roomperfect_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Focus 1',
  })
# ---
# name: test_entities[select.mock_lyngdorf_voicing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Neutral',
        'Music',
        'Movie',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.mock_lyngdorf_voicing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Voicing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Voicing',
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'voicing',
    'unique_id': '0050c27c76b2_voicing',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[select.mock_lyngdorf_voicing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf Voicing',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'Neutral',
        'Music',
        'Movie',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.mock_lyngdorf_voicing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Neutral',
  })
# ---
